--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "firebase": "^9.7.0",
     "vue": "^3.2.33",
     "vue-router": "^4.0.15"
