--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "bootstrap-vue": "^2.22.0",
     "firebase": "^9.8.0",
     "firebase-tools": "^10.8.0",
