--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase": "^9.8.1",
     "firebase-tools": "^10.8.0",
     "vue": "^3.2.33",
-    "vue-router": "^4.0.15"
+    "vue-router": "^4.0.15",
+    "vue3-popper": "^1.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
